run multiple workers
this requires a little locking to prevent multiple change requests from
hitting dockerd at once

--- a/manager/supervisord.conf
+++ b/manager/supervisord.conf
@@ -10,3 +10,5 @@ command=gunicorn -w 4 -b 0.0.0.0 app:app
 
 [program:worker]
 command=rqworker
+numprocs=3
+process_name=%(program_name)s_%(process_num)02d
