use nginx in front of gunicorn

--- a/manager/Dockerfile
+++ b/manager/Dockerfile
@@ -1,17 +1,18 @@
 # bro
 #
-# VERSION               0.1
+# VERSION               0.2
 
 FROM      ubuntu
 MAINTAINER Justin Azoff <justin.azoff@gmail.com>
 
-RUN apt-get update
-RUN apt-get -y install python-pip
+RUN apt-get update && apt-get install -yq python-pip
+RUN apt-get update && apt-get install -yq redis-server
 
-RUN apt-get -y install redis-server
 RUN sed -i "s/daemonize yes/daemonize no/" /etc/redis/redis.conf
 
-RUN apt-get -y install supervisor
+RUN apt-get update && apt-get install -yq nginx
+RUN apt-get update && apt-get install -yq supervisor
+
 RUN mkdir -p /var/log/supervisor
 RUN mkdir /brostuff
 
@@ -19,9 +20,11 @@ ADD requirements.txt requirements.txt
 RUN pip install -r requirements.txt
 
 ADD supervisord.conf /etc/supervisor/conf.d/supervisord.conf
+ADD nginx.config /etc/nginx/sites-enabled/default
+RUN echo "daemon off;" >> /etc/nginx/nginx.conf
 
 ADD . /src
 WORKDIR /src
 
-EXPOSE  8000
+EXPOSE  80
 CMD ["/usr/bin/supervisord"]
