show nginx logs

--- a/manager/supervisord.conf
+++ b/manager/supervisord.conf
@@ -15,3 +15,7 @@ command=gunicorn -w 2 -b 0.0.0.0 app:app
 command=rqworker
 numprocs=5
 process_name=%(program_name)s_%(process_num)02d
+
+
+[program:log]
+command=tail -f /var/log/nginx/access.log /var/log/nginx/error.log
