--- a/bro/Dockerfile
+++ b/bro/Dockerfile
@@ -8,12 +8,13 @@ MAINTAINER Justin Azoff <justin.azoff@gmail.com>
 RUN apt-get update
 RUN apt-get -y install build-essential git bison flex cmake swig libssl-dev libgeoip-dev libmagic-dev libpcap-dev python-dev libcurl4-openssl-dev
 
-RUN git clone --recursive git://git.bro.org/bro
-
 ADD buildbro ./buildbro
+RUN ./buildbro 2.2
+RUN ./buildbro 2.3
 
-RUN ./buildbro v2.2 2.2
-RUN ./buildbro v2.3 2.3
+RUN cd /tmp && git clone --recursive git://git.bro.org/bro
+ADD gitbro ./gitbro
+RUN ./gitbro 5d7b3f850be483c99b6c123387798f408041d825
 
 RUN ln -s /bro-2.3 /bro
 
