--- a/bro/Dockerfile
+++ b/bro/Dockerfile
@@ -6,7 +6,7 @@ FROM      ubuntu
 MAINTAINER Justin Azoff <justin.azoff@gmail.com>
 
 RUN apt-get update
-RUN apt-get -y install build-essential git bison flex cmake swig libssl-dev libgeoip-dev libmagic-dev libpcap-dev python-dev libcurl4-openssl-dev
+RUN apt-get -y install build-essential git bison flex cmake swig libssl-dev libgeoip-dev libmagic-dev libpcap-dev python-dev libcurl4-openssl-dev wget
 
 ADD buildbro ./buildbro
 RUN ./buildbro 2.2
