fix building of archived versions

--- a/bro/Dockerfile
+++ b/bro/Dockerfile
@@ -9,8 +9,8 @@ RUN apt-get update && echo 2014-06-17
 RUN apt-get -y install build-essential git bison flex cmake swig libssl-dev libgeoip-dev libmagic-dev libpcap-dev python-dev libcurl4-openssl-dev wget
 
 ADD buildbro ./buildbro
-RUN ./buildbro 2.2
-RUN ./buildbro 2.3
+RUN ./buildbro 2.2 http://www.bro.org/downloads/archive/bro-2.2.tar.gz
+RUN ./buildbro 2.3 http://www.bro.org/downloads/release/bro-2.3.tar.gz
 
 RUN cd /tmp && git clone --recursive git://git.bro.org/bro
 ADD gitbro ./gitbro
