--- a/manager/nginx.config
+++ b/manager/nginx.config
@@ -35,7 +35,7 @@ server {
 		include /etc/nginx/proxy_params;
 		proxy_connect_timeout 10;
 		proxy_read_timeout 10;
-		proxy_pass http://localhost:8000;
+		proxy_pass http://127.0.0.1:8000;
 	}
 
 	location /doc/ {
