port to celery, simplify the api

--- a/manager/supervisord.conf
+++ b/manager/supervisord.conf
@@ -2,20 +2,20 @@
 nodaemon=true
 loglevel=debug
 
-[program:nginx]
-command=nginx
-
 [program:redis]
 command=redis-server /etc/redis/redis.conf
 
 [program:gunicorn]
-command=gunicorn -w 4 -b 0.0.0.0 app:app
+command=gunicorn -w 4 -b 0.0.0.0 app:app --log-file -
+
+[program:nginx]
+command=nginx
 
 [program:worker]
-command=rqworker
-numprocs=5
-process_name=%(program_name)s_%(process_num)02d
-
+command=celery -A backend worker --loglevel=info
 
 [program:log]
-command=tail -f /var/log/nginx/access.log /var/log/nginx/error.log
+command=tail -F /var/log/nginx/access.log
+
+[program:err]
+command=tail -F /var/log/nginx/error.log
