--- a/manager/requirements.txt
+++ b/manager/requirements.txt
@@ -1,5 +1,22 @@
-docker-py
-flask
-gunicorn
-redis
-rq
+Flask==0.10.1
+Jinja2==2.7.3
+MarkupSafe==0.23
+Werkzeug==0.9.6
+argparse==1.2.1
+chardet==2.0.1
+colorama==0.2.5
+coverage==3.7.1
+docker-py==0.4.0
+gunicorn==19.1.1
+html5lib==0.999
+itsdangerous==0.24
+meld3==0.6.10
+mock==1.0.1
+redis==2.10.3
+requests==2.2.1
+six==1.5.2
+supervisor==3.0b2
+urllib3==1.7.1
+websocket-client==0.11.0
+wsgiref==0.1.2
+celery[redis]
