also tail redis log

--- a/manager/supervisord.conf
+++ b/manager/supervisord.conf
@@ -19,3 +19,6 @@ command=tail -F /var/log/nginx/access.log
 
 [program:err]
 command=tail -F /var/log/nginx/error.log
+
+[program:redislog]
+command=tail -F /var/log/redis/redis-server.log
