--- a/trybro.conf
+++ b/trybro.conf
@@ -5,5 +5,5 @@ stop on runlevel [!2345]
 respawn
 
 script
-    /usr/bin/docker run -v /brostuff:/brostuff -v /var/run/docker.sock:/var/run/docker.sock --volumes-from trybro_data --rm=true -p 80:80 bro_manager
+    /usr/bin/docker run -v /brostuff:/brostuff -v /var/run/docker.sock:/var/run/docker.sock --volumes-from trybro_data --rm=true -p 80:80 trybro
 end script
