enable some reliability features for gunicorn

--- a/manager/supervisord.conf
+++ b/manager/supervisord.conf
@@ -6,7 +6,7 @@ loglevel=debug
 command=redis-server /etc/redis/redis.conf
 
 [program:gunicorn]
-command=gunicorn -w 4 -b 0.0.0.0 app:app --log-file -
+command=gunicorn -w 4 -b 0.0.0.0 app:app --log-file - --max-requests 500 --timeout 30
 
 [program:nginx]
 command=nginx
