--- a/manager/Makefile
+++ b/manager/Makefile
@@ -1,6 +1,6 @@
 all:
 	cd static/examples && ./pack.py
-	docker build -t trybro ./
+	docker build -t broplatform/trybro ./
 
 run: all
-	docker run -v /brostuff:/brostuff -v /var/run/docker.sock:/var/run/docker.sock --volumes-from trybro_data --rm -t -i -p 80:80 trybro
+	docker run -v /brostuff:/brostuff -v /var/run/docker.sock:/var/run/docker.sock --volumes-from trybro_data --rm -t -i -p 80:80 broplatform/trybro
