--- a/manager/supervisord.conf
+++ b/manager/supervisord.conf
@@ -12,7 +12,9 @@ command=gunicorn -w 4 -b 0.0.0.0 app:app --log-file - --max-requests 500 --timeo
 command=nginx
 
 [program:worker]
-command=celery -A backend worker --loglevel=info
+command=./worker.py
+numprocs=5
+process_name=%(program_name)s_%(process_num)02d
 
 [program:log]
 command=tail -F /var/log/nginx/access.log
