--- a/manager/supervisord.conf
+++ b/manager/supervisord.conf
@@ -11,6 +11,9 @@ command=gunicorn -w 4 -b 0.0.0.0 app:app --log-file - --max-requests 500 --timeo
 [program:nginx]
 command=nginx
 
+[program:gearmand]
+command=gearmand
+
 [program:worker]
 command=./worker.py
 numprocs=5
