--- a/trybro.conf
+++ b/trybro.conf
@@ -5,5 +5,6 @@ stop on runlevel [!2345]
 respawn
 
 script
-    /usr/bin/docker run -v /brostuff:/brostuff -v /var/run/docker.sock:/var/run/docker.sock --volumes-from trybro_data --rm=true -p 80:80 broplatform/trybro
+    /usr/bin/docker pull broplatform/bro
+    /usr/bin/docker run --name trybro -v /brostuff:/brostuff -v /var/run/docker.sock:/var/run/docker.sock -v /srv/trybro_data:/var/lib/redis --rm=true -p 80:80 broplatform/trybro
 end script
