pack the examples during the normal build process

--- a/manager/Dockerfile
+++ b/manager/Dockerfile
@@ -27,6 +27,8 @@ RUN echo "daemon off;" >> /etc/nginx/nginx.conf
 ADD . /src
 WORKDIR /src
 
+RUN cd static/examples && ./pack.py
+
 #Redirect log files
 #
 RUN ln -sf /dev/stdout /var/log/redis/redis-server.log
