--- a/manager/nginx.config
+++ b/manager/nginx.config
@@ -28,6 +28,10 @@ server {
 	# Make site accessible from http://localhost/
 	server_name localhost;
 
+	gzip  on;
+	gzip_comp_level 2;
+	gzip_types  *;
+
 	location / {
 		# First attempt to serve request as file, then
 		# as directory, then fall back to displaying a 404.
