--- a/manager/web-ui/package.json
+++ b/manager/web-ui/package.json
@@ -6,8 +6,19 @@
     "react-scripts": "0.6.1"
   },
   "dependencies": {
+    "bootstrap": "^3.3.7",
+    "history": "^4.3.0",
+    "isomorphic-fetch": "^2.2.1",
+    "md5": "^2.2.1",
+    "query-string": "^4.2.3",
     "react": "^15.3.2",
-    "react-dom": "^15.3.2"
+    "react-ace": "^3.6.0",
+    "react-bootstrap": "^0.30.5",
+    "react-dom": "^15.3.2",
+    "react-redux": "^4.4.5",
+    "redux": "^3.6.0",
+    "redux-logger": "^2.7.0",
+    "redux-thunk": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
