Refactor to use multi stage build.
Building the container no longer requires nodejs on the local machine, the
react app is built inside of a node container first, then the build output is
merged into the final image.

--- a/manager/Dockerfile
+++ b/manager/Dockerfile
@@ -1,19 +1,22 @@
-# bro
+# tryzeek
 #
 # VERSION               0.3
 
-FROM      ubuntu:trusty
+FROM node as web-builder
+ADD web-ui/package.json web-ui/
+ADD web-ui/package-lock.json web-ui/
+RUN cd web-ui && npm install
+ADD web-ui web-ui
+RUN make -C web-ui
+
+FROM      ubuntu:xenial
 MAINTAINER Justin Azoff <justin.azoff@gmail.com>
 
-RUN rm /var/lib/apt/lists/*list -vf && apt-get update && apt-get dist-upgrade -yq #2016-10-06
+RUN rm /var/lib/apt/lists/*list -vf && apt-get update && apt-get dist-upgrade -yq #2018-11-29
 RUN apt-get update && apt-get install -yq python-pip python-dev
-RUN apt-get update && apt-get install -yq redis-server
+RUN apt-get update && apt-get install -yq redis-server nginx supervisor gearman-job-server rsync
 
 RUN sed -i "s/daemonize yes/daemonize no/" /etc/redis/redis.conf
-
-RUN apt-get update && apt-get install -yq nginx
-RUN apt-get update && apt-get install -yq supervisor
-RUN apt-get update && apt-get install -yq gearman-job-server
 
 RUN mkdir -p /var/log/supervisor
 RUN mkdir /brostuff
@@ -28,6 +31,12 @@ RUN echo "daemon off;" >> /etc/nginx/nginx.conf
 ADD . /src
 WORKDIR /src
 
+# Add the webpack output to the web root
+COPY --from=web-builder web-ui/build/ web-ui-build
+RUN cp web-ui-build/*.* static/
+RUN rsync -avP web-ui-build/static/ static/
+
+
 RUN cd static/examples && ./pack.py
 
 #Redirect log files
@@ -36,5 +45,6 @@ RUN ln -sf /dev/stdout /var/log/redis/redis-server.log
 RUN ln -sf /dev/stdout /var/log/nginx/access.log
 RUN ln -sf /dev/stderr /var/log/nginx/error.log
 
+VOLUME /var/lib/redis
 EXPOSE  80
 CMD ["/usr/bin/supervisord"]
