--- a/manager/Makefile
+++ b/manager/Makefile
@@ -1,8 +1,5 @@
 all:
-	make -C web-ui
-	cp web-ui/build/*.* static/
-	rsync -avP web-ui/build/static/ static/
 	docker build -t broplatform/trybro ./
 
 run: all
-	docker run -v /brostuff:/brostuff -v /var/run/docker.sock:/var/run/docker.sock --volumes-from trybro_data --rm -t -i -p 80:80 broplatform/trybro
+	docker run -v /brostuff:/brostuff -v /var/run/docker.sock:/var/run/docker.sock -v /srv/trybro_data:/var/lib/redis --rm -t -i -p 80:80 broplatform/trybro
