--- a/trybro.conf
+++ b/trybro.conf
@@ -6,5 +6,5 @@ respawn
 
 script
     /usr/bin/docker pull broplatform/bro
-    /usr/bin/docker run --name trybro -v /brostuff:/brostuff -v /var/run/docker.sock:/var/run/docker.sock -v /srv/trybro_data:/var/lib/redis --rm=true -p 80:80 broplatform/trybro
+    /usr/bin/docker run --name trybro -v /brostuff:/brostuff -v /var/run/docker.sock:/var/run/docker.sock -v /srv/trybro_data:/var/lib/redis -v /certs:/root/certs --rm=true -p 80:80 -p 443:443 broplatform/trybro
 end script
