--- a/manager/nginx.config
+++ b/manager/nginx.config
@@ -53,7 +53,7 @@ server {
 
 	# Only for nginx-naxsi used with nginx-naxsi-ui : process denied requests
 	#location /RequestDenied {
-	#	proxy_pass http://127.0.0.1:8080;    
+	#	proxy_pass http://127.0.0.1:8080;
 	#}
 
 	#error_page 404 /404.html;
@@ -105,24 +105,53 @@ server {
 
 # HTTPS server
 #
-#server {
-#	listen 443;
-#	server_name localhost;
+server {
+	client_max_body_size 10M;
+	listen 443 ssl http2;
+	#listen [::]443 ssl http2;
+
+    root /usr/share/nginx/html;
+	index index.html index.htm;
+
+	# Make site accessible from http://localhost/
+	server_name localhost;
+
+	gzip  on;
+	gzip_comp_level 2;
+	gzip_types  *;
+
+	location / {
+		# First attempt to serve request as file, then
+		# as directory, then fall back to displaying a 404.
+		# Uncomment to enable naxsi on this location
+		# include /etc/nginx/naxsi.rules
+		include /etc/nginx/proxy_params;
+		proxy_connect_timeout 10;
+		proxy_read_timeout 10;
+		proxy_pass http://127.0.0.1:8000;
+	}
+
+	location /doc/ {
+		alias /usr/share/doc/;
+		autoindex on;
+		allow 127.0.0.1;
+		allow ::1;
+		deny all;
+    }
 #
-#	root html;
-#	index index.html index.htm;
+	ssl on;
+	ssl_certificate /root/certs/ssl-cert-snakeoil.pem;
+	ssl_certificate_key /root/certs/ssl-cert-snakeoil.key;
 #
-#	ssl on;
-#	ssl_certificate cert.pem;
-#	ssl_certificate_key cert.key;
+# Best Practices: https://www.linode.com/docs/web-servers/nginx/tls-deployment-best-practices-for-nginx/
+    ssl_session_cache shared:SSL:10m;
+	ssl_session_timeout 10m;
 #
-#	ssl_session_timeout 5m;
-#
-#	ssl_protocols SSLv3 TLSv1;
+	ssl_protocols TLSv1.1 TLSv1;
 #	ssl_ciphers ALL:!ADH:!EXPORT56:RC4+RSA:+HIGH:+MEDIUM:+LOW:+SSLv3:+EXP;
-#	ssl_prefer_server_ciphers on;
+	ssl_prefer_server_ciphers on;
 #
 #	location / {
 #		try_files $uri $uri/ =404;
 #	}
-#}
+}
