--- a/trybro.service
+++ b/trybro.service
@@ -9,7 +9,7 @@ ExecStartPre=-/usr/bin/docker kill trybro
 ExecStartPre=-/usr/bin/docker rm trybro
 ExecStartPre=/usr/bin/docker pull broplatform/trybro
 ExecStartPre=/usr/bin/docker pull broplatform/bro
-ExecStart=/usr/bin/docker  run --name trybro -v /brostuff:/brostuff -v /var/run/docker.sock:/var/run/docker.sock -v /srv/trybro_data:/var/lib/redis --rm=true -p 80:80 broplatform/trybro
+ExecStart=/usr/bin/docker  run --name trybro -v /brostuff:/brostuff -v /var/run/docker.sock:/var/run/docker.sock -v /srv/trybro_data:/var/lib/redis -v /certs:/root/certs --rm=true -p 80:80 -p 443:443 broplatform/trybro
 #ExecStart=/usr/bin/docker run --name trybro  -v /brostuff:/brostuff -v /var/run/docker.sock:/var/run/docker.sock --volumes-from trybro_data --rm=true -p 80:80 broplatform/trybro
 
 [Install]
