update makefile to use docker-compose

--- a/manager/Makefile
+++ b/manager/Makefile
@@ -1,5 +1,6 @@
 all:
-	docker build -t broplatform/trybro ./
+	docker-compose build
 
 run: all
-	docker run -v /brostuff:/brostuff -v /var/run/docker.sock:/var/run/docker.sock -v /srv/trybro_data:/var/lib/redis --rm -t -i -p 80:80 broplatform/trybro
+	docker-compose up -d
+	docker-compose logs -f
