--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3'
 services:
   redis:
     image: redis
+    restart: always
     networks:
       - backend
     volumes:
@@ -17,10 +18,9 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - /brostuff:/brostuff
+    restart: always
     deploy:
       replicas: 5
-      restart_policy:
-        condition: on-failure
     depends_on:
       - redis
       - gearman
@@ -30,9 +30,7 @@ services:
   api:
     build: manager
     command: gunicorn -w 4 -b 0.0.0.0 app:app --log-file - --max-requests 500 --timeout 10
-    deploy:
-      restart_policy:
-        condition: on-failure
+    restart: always
     depends_on:
       - redis
       - gearman
@@ -42,6 +40,7 @@ services:
 
   proxy:
     image: abiosoft/caddy
+    restart: always
     environment:
       - ACME_AGREE=true
       - ENABLE_TELEMETRY=false
