--- a/tryzeek.service
+++ b/tryzeek.service
@@ -7,8 +7,7 @@ Requires=docker.service
 TimeoutStartSec=0
 #ExecStartPre=-/usr/bin/docker kill trybro
 #ExecStartPre=-/usr/bin/docker rm trybro
-#ExecStartPre=/usr/bin/docker pull broplatform/trybro
-ExecStartPre=/usr/bin/docker pull broplatform/bro:3.0.0
+ExecStartPre=/usr/bin/docker pull zeekurity/zeek:4.2.0
 WorkingDirectory=/root/try-zeek
 RemainAfterExit=yes
 Type=oneshot
