--- a/manager/requirements.txt
+++ b/manager/requirements.txt
@@ -1,24 +1,34 @@
-Flask==1.0.0
-Jinja2==2.11.3
-MarkupSafe==0.23
-Werkzeug==0.16.0
-argparse==1.2.1
-chardet==3.0.4
-colorama==0.2.5
-coverage==3.7.1
-docker-py==1.3.1
-gunicorn==19.5.0
-html5lib==0.999
-itsdangerous==0.24
-meld3==0.6.10
-mock==1.0.1
-redis==2.10.3
-requests==2.2.1
-six==1.5.2
-supervisor==3.0b2
-urllib3==1.26.5
-websocket-client==0.11.0
-wsgiref==0.1.2
-flask-jsonpify
-gearman==2.0.2
-Markdown==2.6.2
+async-timeout==4.0.2
+certifi==2022.9.24
+chardet==5.0.0
+charset-normalizer==2.1.1
+click==8.1.3
+colorama==0.4.6
+coverage==6.5.0
+Deprecated==1.2.13
+docker-py==1.10.6
+docker-pycreds==0.4.0
+Flask==2.2.2
+Flask-Jsonpify==1.5.0
+gunicorn==20.1.0
+html5lib==1.1
+idna==3.4
+importlib-metadata==5.0.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+Markdown==3.4.1
+MarkupSafe==2.1.1
+mock==4.0.3
+packaging==21.3
+pyparsing==3.0.9
+redis==4.3.4
+requests==2.28.1
+rq==1.11.1
+six==1.16.0
+supervisor==4.2.4
+urllib3==1.26.12
+webencodings==0.5.1
+websocket-client==1.4.2
+Werkzeug==2.2.2
+wrapt==1.14.1
+zipp==3.10.0
