Default to 67 minute interval
Also, fix version sorting for 10.0 and above. Implement paging, but
only fetch the first page. Fix crash when docker daemon has no
zeek/zeek images yet.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,9 +22,9 @@ services:
     networks:
       - backend
 
-  version-update:
+  version-updater:
     build: manager
-    command: python3 version.py -i 300
+    command: python3 version.py -i 4020
     init: true
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
