--- a/manager/web-ui/package.json
+++ b/manager/web-ui/package.json
@@ -22,7 +22,6 @@
     "react-overlays": "^5.2.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
-    "react-scripts": "^5.0.1",
     "redux": "^4.2.0",
     "redux-logger": "^2.7.0",
     "redux-thunk": "^2.4.2"
@@ -44,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-scripts": "^5.0.1"
   }
 }
