Add client-side syntax checking against Zeek tree-sitter grammar
This adds client-side validation of code via tree-sitter-zeek. In
contrast to errors from `zeek` itself errors here are marked warnings,
not errors. To support this we build the tree-sitter-zeek grammar into a
WASM file and load it with `web-tree-sitter`. To support `web-tree-sitter`
we need to customize the webpack setup which we can do by switching from
`react-scripts` to `craco`. The grammar itself is added as a Git
submodule.

--- a/manager/Dockerfile
+++ b/manager/Dockerfile
@@ -3,8 +3,16 @@
 # VERSION               0.3
 
 FROM node as web-builder
+
+# Building the tree-sitter-zeek WASM output files requires emscripten.
+RUN apt-get update \
+ && apt-get install --no-install-recommends -qy emscripten \
+ && apt-get clean && rm -rf /var/lib/apt/lists/*
+
 ADD web-ui/package.json web-ui/
 ADD web-ui/package-lock.json web-ui/
+ADD web-ui/tree-sitter-zeek web-ui/tree-sitter-zeek
+RUN mkdir web-ui/src # Output location for tree-sitter-zeek.wasm
 RUN cd web-ui && npm install
 ADD web-ui web-ui
 RUN make -C web-ui
