--- a/manager/requirements.txt
+++ b/manager/requirements.txt
@@ -6,7 +6,7 @@ click==8.1.3
 colorama==0.4.6
 coverage==6.5.0
 Deprecated==1.2.13
-docker-py==1.10.6
+docker==7.1.0
 docker-pycreds==0.4.0
 Flask==2.3.2
 Flask-Jsonpify==1.5.0
@@ -22,7 +22,7 @@ mock==4.0.3
 packaging==21.3
 pyparsing==3.0.9
 redis==4.4.4
-requests==2.32.0
+requests==2.32.4
 rq==1.11.1
 six==1.16.0
 supervisor==4.2.4
